--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,8 @@ stages:
     - build
 
 before_script:
-    - apt-get update -y -q
+    - apt update -y -q
+    - apt install build-essential -y -q
     - apt install curl -y -q
     - "curl -sL https://deb.nodesource.com/setup_14.x | bash -"
     - apt install nodejs -y -q
