--- a/PokerPlanning/PokerPlanning.Web/ClientApp/package.json
+++ b/PokerPlanning/PokerPlanning.Web/ClientApp/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "echo Starting... && ng serve",
     "build": "ng build",
     "build:ssr": "ng run PokerPlanning.Web:server:dev",
     "test": "ng test",
@@ -17,12 +17,14 @@
     "@angular/compiler": "10.0.9",
     "@angular/core": "10.0.9",
     "@angular/forms": "10.0.9",
+    "@angular/localize": "10.0.9",
     "@angular/platform-browser": "10.0.9",
     "@angular/platform-browser-dynamic": "10.0.9",
     "@angular/platform-server": "10.0.9",
     "@angular/router": "10.0.9",
-    "@nguniversal/module-map-ngfactory-loader": "8.2.6",
     "@microsoft/signalr": "3.1.7",
+    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
+    "@nguniversal/module-map-ngfactory-loader": "8.2.6",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.5.2",
     "core-js": "^3.6.5",
