--- a/PokerPlanning/PokerPlanning.Web/ClientApp/package.json
+++ b/PokerPlanning/PokerPlanning.Web/ClientApp/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "echo Starting... && ng serve",
+    "start": "echo starting... && ng serve",
     "build": "ng build",
     "build:ssr": "ng run PokerPlanning.Web:server:dev",
     "test": "ng test",
