--- a/PokerPlanning/PokerPlanning.Web/ClientApp/package.json
+++ b/PokerPlanning/PokerPlanning.Web/ClientApp/package.json
@@ -32,6 +32,7 @@
     "oidc-client": "^1.10.1",
     "popper.js": "^1.16.1",
     "rxjs": "^6.6.2",
+    "uuid": "^8.3.0",
     "zone.js": "0.10.3"
   },
   "devDependencies": {
