--- a/PokerPlanning/PokerPlanning.Core/PokerPlanning.Core.csproj
+++ b/PokerPlanning/PokerPlanning.Core/PokerPlanning.Core.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Autofac" Version="5.2.0" />
       <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     </ItemGroup>
 
