Added basic web app with identity server

--- a/PokerPlanning/PokerPlanning.Web/appsettings.json
+++ b/PokerPlanning/PokerPlanning.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=8045;Database=poker-planning;Username=postgres;Password=postgres"
+    "DefaultConnection": "DataSource=app.db;Cache=Shared"
   },
   "Logging": {
       "LogLevel": {
