--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,10 +11,9 @@ before_script:
     - apt install nodejs -y -q
     - node --version
     - npm --version
-    - cd PokerPlanning/
-    - "dotnet restore"
 
 build:
     stage: build
     script:
-        - "dotnet build"
+        - dotnet restore PokerPlanning/PokerPlanning.sln
+        - dotnet build PokerPlanning/PokerPlanning.sln --no-restore
