--- a/PokerPlanning/PokerPlanning.Web/ClientApp/package.json
+++ b/PokerPlanning/PokerPlanning.Web/ClientApp/package.json
@@ -26,9 +26,13 @@
     "bootstrap": "^4.3.1",
     "core-js": "^3.3.3",
     "jquery": "3.4.1",
+    "node-sass": "^5.0.0",
     "oidc-client": "^1.9.1",
     "popper.js": "^1.16.0",
+    "protractor": "~5.4.2",
     "rxjs": "^6.5.3",
+    "ts-node": "~8.4.1",
+    "tslint": "~5.20.0",
     "zone.js": "0.9.1"
   },
   "devDependencies": {
@@ -50,7 +54,7 @@
     "typescript": "3.5.3"
   },
   "optionalDependencies": {
-    "node-sass": "^4.12.0",
+    "node-sass": "^5.0.0",
     "protractor": "~5.4.2",
     "ts-node": "~8.4.1",
     "tslint": "~5.20.0"
