--- a/PokerPlanning/PokerPlanning.Web/ClientApp/package.json
+++ b/PokerPlanning/PokerPlanning.Web/ClientApp/package.json
@@ -12,51 +12,51 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "8.2.12",
-    "@angular/common": "8.2.12",
-    "@angular/compiler": "8.2.12",
-    "@angular/core": "8.2.12",
-    "@angular/forms": "8.2.12",
-    "@angular/platform-browser": "8.2.12",
-    "@angular/platform-browser-dynamic": "8.2.12",
-    "@angular/platform-server": "8.2.12",
-    "@angular/router": "8.2.12",
+    "@angular/animations": "11.2.3",
+    "@angular/common": "11.2.3",
+    "@angular/compiler": "11.2.3",
+    "@angular/core": "11.2.3",
+    "@angular/forms": "11.2.3",
+    "@angular/platform-browser": "11.2.3",
+    "@angular/platform-browser-dynamic": "11.2.3",
+    "@angular/platform-server": "11.2.3",
+    "@angular/router": "11.2.3",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
     "aspnet-prerendering": "^3.0.1",
-    "bootstrap": "^4.3.1",
-    "core-js": "^3.3.3",
-    "jquery": "3.4.1",
+    "bootstrap": "^4.6.0",
+    "core-js": "^3.9.0",
+    "jquery": "3.5.1",
     "node-sass": "^5.0.0",
-    "oidc-client": "^1.9.1",
+    "oidc-client": "^1.11.5",
     "popper.js": "^1.16.0",
-    "protractor": "~5.4.2",
-    "rxjs": "^6.5.3",
-    "ts-node": "~8.4.1",
-    "tslint": "~5.20.0",
-    "zone.js": "0.9.1"
+    "protractor": "~7.0.0",
+    "rxjs": "^6.6.6",
+    "ts-node": "~9.1.1",
+    "tslint": "^6.1.0",
+    "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.26",
-    "@angular/cli": "^8.3.26",
-    "@angular/compiler-cli": "^8.2.14",
-    "@angular/language-service": "^8.2.12",
-    "@types/jasmine": "~3.4.4",
+    "@angular-devkit/build-angular": "^0.1102.2",
+    "@angular/cli": "^11.2.2",
+    "@angular/compiler-cli": "^11.2.3",
+    "@angular/language-service": "^11.2.3",
+    "@types/jasmine": "~3.6.4",
     "@types/jasminewd2": "~2.0.8",
-    "@types/node": "~12.11.6",
-    "codelyzer": "^5.2.0",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^5.0.2",
+    "@types/node": "~14.14.31",
+    "codelyzer": "^6.0.1",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~6.0.0",
+    "karma": "^6.1.1",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~2.1.0",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
-    "typescript": "3.5.3"
+    "karma-coverage-istanbul-reporter": "~3.0.3",
+    "karma-jasmine": "~4.0.1",
+    "karma-jasmine-html-reporter": "^1.5.4",
+    "typescript": "^4.1.0"
   },
   "optionalDependencies": {
     "node-sass": "^5.0.0",
-    "protractor": "~5.4.2",
-    "ts-node": "~8.4.1",
-    "tslint": "~5.20.0"
+    "protractor": "~7.0.0",
+    "ts-node": "~9.1.1",
+    "tslint": "^6.1.0"
   }
 }
