Db changed to PG

--- a/PokerPlanning/PokerPlanning.Web/appsettings.Development.json
+++ b/PokerPlanning/PokerPlanning.Web/appsettings.Development.json
@@ -10,5 +10,9 @@
     "Key": {
       "Type": "Development"
     }
+  },
+  "DbRetryCount": 5,
+  "ConnectionStrings": {
+    "PostgreSQLConnection": "User ID=admin;Password=admin;Server=docker.server.codegarage.local;Port=5432;Database=poker-planning-web;Integrated Security=true;Pooling=true;"
   }
 }
