--- a/PokerPlanning/PokerPlanning.Web/appsettings.Production.json
+++ b/PokerPlanning/PokerPlanning.Web/appsettings.Production.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db;Cache=Shared"
+    "PostgreSQLConnection": "User ID=admin;Password=admin;Server=poker-planning-db;Port=5432;Database=poker-planning-web;Integrated Security=true;Pooling=true;"
   },
   "Logging": {
       "LogLevel": {
@@ -9,6 +9,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
       }
     },
+  "DbRetryCount": 10,
   "IdentityServer": {
     "Clients": {
       "PokerPlanning.Web": {
