Fixed missing client in config

--- a/PokerPlanning/PokerPlanning.Web/appsettings.Development.json
+++ b/PokerPlanning/PokerPlanning.Web/appsettings.Development.json
@@ -9,6 +9,11 @@
   "IdentityServer": {
     "Key": {
       "Type": "Development"
+    },
+    "Clients": {
+      "PokerPlanning.Web": {
+        "Profile": "IdentityServerSPA"
+      }
     }
   },
   "DbRetryCount": 5,
