--- a/PokerPlanning/PokerPlanning.Web/ClientApp/tsconfig.json
+++ b/PokerPlanning/PokerPlanning.Web/ClientApp/tsconfig.json
@@ -9,7 +9,7 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "target": "es2015",
+    "target": "ESNext",
     "typeRoots": [
       "node_modules/@types"
     ],
