--- a/PokerPlanning/PokerPlanning.Web/ClientApp/angular.json
+++ b/PokerPlanning/PokerPlanning.Web/ClientApp/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "076bb2e4-689e-48a0-b6e3-dfa47be3ec77"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
