--- a/PokerPlanning/PokerPlanning.Web/ClientApp/package.json
+++ b/PokerPlanning/PokerPlanning.Web/ClientApp/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "11.2.3",
     "@angular/platform-server": "11.2.3",
     "@angular/router": "11.2.3",
+    "@microsoft/signalr": "^5.0.3",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.6.0",
