--- a/PokerPlanning/PokerPlanning.Web/Properties/launchSettings.json
+++ b/PokerPlanning/PokerPlanning.Web/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:14321",
-      "sslPort": 44320
+      "applicationUrl": "http://localhost:11983",
+      "sslPort": 44316
     }
   },
   "profiles": {
@@ -18,10 +18,17 @@
     "PokerPlanning.Web": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "http://localhost:5000"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "publishAllPorts": true,
+      "useSSL": true
     }
   }
 }
