Added card templates, new cards setup

--- a/PokerPlanning/PokerPlanning.Web/ClientApp/package.json
+++ b/PokerPlanning/PokerPlanning.Web/ClientApp/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^4.6.0",
     "core-js": "^3.9.0",
     "jquery": "3.5.1",
+    "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "oidc-client": "^1.11.5",
     "popper.js": "^1.16.0",
     "protractor": "~7.0.0",
